--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.12.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -25,7 +26,10 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.7",
-    "@babel/preset-react": "^7.12.7"
+    "@babel/preset-react": "^7.12.7",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "bulma": "^0.9.1",
+    "node-sass": "^5.0.0"
   },
   "browserslist": {
     "production": [
